<resources>
    <string name="notification_channel_name">알람</string>
    <string name="modal_close_gathering">모임을 종료하시겠어요?</string>
    <string name="modal_quit_gathering">모임에서 나가기\n하시겠어요?</string>
    <string name="modal_kick_out_user">"%s"님을\n강퇴하시겠어요?</string>
    <string name="modal_yes_i_do">네, 할게요</string>
    <string name="modal_cancel">취소</string>
    <string name="terms_privacy">[여러분을 환영합니다.] 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사</string>
    <string name="terms_location">[여러분을 환영합니다.] 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사</string>
    <string name="terms_age">[여러분을 환영합니다.] 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사</string>
    <string name="terms_collect">[여러분을 환영합니다.] 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사</string>
    <string name="terms_marketing">[여러분을 환영합니다.] 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사 네이버 서비스 및 제품(이하 ‘서비스’)을 이용해 주셔서 감사합니다. 본 약관은 다양한 네이버 서비스의 이용과 관련하여 네이버 서비스를 제공하는 네이버 주식회사</string>
    <string name="int_to_string">%d</string>
    <string name="app_name">PLUB</string>
    <string name="web_google_client_id">746494448016-j25cuo21ut0ofgbba9h4n6b63502uimi.apps.googleusercontent.com</string>
    <string name="kakao_redirect_url_key">kakao5c988e60cc77ac9ad664f1f37293ee2d</string>
    <string name="plub_emil">plub2023@gmail.com</string>
    <string name="service_policies">https://plub.notion.site/63cdf80be630466d868df43d56b69e15</string>
    <string name="personal_policies">https://plub.notion.site/83eb3cad087647f6b58fe383d3224af7</string>
    <string name="faq_site">https://plub.notion.site/FAQ-17ae9dfbfb6d4812ab27537c18f709fc</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_text_category_name_art">예술</string>
    <string name="fragment_text_category_name_food">음식</string>
    <string name="fragment_text_category_name_investment">제테크/투자</string>
    <string name="fragment_text_category_name_language">어학</string>
    <string name="fragment_text_category_name_culture">문화</string>
    <string name="fragment_text_category_name_sport">스포츠/피트니스</string>
    <string name="fragment_text_category_name_employment">취업/창업</string>
    <string name="fragment_text_category_name_computer">컴퓨터</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="word_skip_uppercase">SKIP</string>
    <string name="word_next">다음</string>
    <string name="word_cancel">취소</string>
    <string name="word_gender">성별</string>
    <string name="word_man">남성</string>
    <string name="word_woman">여성</string>
    <string name="word_birth">생년월일</string>
    <string name="word_birth_year">%s년</string>
    <string name="word_birth_month">%s월</string>
    <string name="word_birth_day">%s일</string>
    <string name="word_terms_service">서비스 약관</string>
    <string name="word_terms_privacy">개인정보 처리방침</string>
    <string name="word_monday">월요일</string>
    <string name="word_tuesday">화요일</string>
    <string name="word_wednesday">수요일</string>
    <string name="word_thursday">목요일</string>
    <string name="word_friday">금요일</string>
    <string name="word_saturday">토요일</string>
    <string name="word_sunday">일요일</string>
    <string name="word_today">오늘</string>
    <string name="word_all_day">요일 무관</string>
    <string name="word_online">온라인</string>
    <string name="word_offline">오프라인</string>
    <string name="word_ok">확인</string>
    <string name="word_people_number">%d명</string>
    <string name="word_question">질문 %d</string>
    <string name="word_add_question">질문 추가</string>
    <string name="word_introduce">소개</string>
    <string name="word_count">%d개</string>
    <string name="word_selected">선택됨</string>
    <string name="word_double_quotation_marks">\"%s\"</string>
    <string name="word_with_us">With Us!</string>
    <string name="word_middle_line">%s | %s</string>
    <string name="word_slash_300">/300</string>
    <string name="word_slash_60">/60</string>
    <string name="word_search_result">검색결과</string>
    <string name="word_sort_type_new">최신순</string>
    <string name="word_sort_type_popular">인기순</string>
    <string name="word_sort">정렬</string>
    <string name="word_bookmark">북마크</string>
    <string name="word_middle_slash">%d/%d</string>
    <string name="word_save">저장</string>
    <string name="word_line">|</string>
    <string name="word_line_space">%s | %s</string>
    <string name="word_location">장소</string>
    <string name="word_alarm">알림</string>
    <string name="word_memo">메모</string>
    <string name="word_middle_hyphen">%s - %s</string>
    <string name="word_every_week">매주 %s</string>
    <string name="word_every_week_day">매주 %s요일</string>
    <string name="word_every_day">매일</string>
    <string name="word_my_gathering">내모임</string>
    <string name="word_host">호스트</string>
    <string name="word_no">아니오</string>
    <string name="word_yes">네</string>
    <string name="word_report">신고하기</string>
    <string name="bottom_navigation_main">메인</string>
    <string name="bottom_navigation_gathering">내 모임</string>
    <string name="bottom_navigation_noti">알림</string>
    <string name="bottom_navigation_profile">프로필</string>
    <string name="onboarding_title_first">취향을 함께</string>
    <string name="onboarding_content_first">좋아하는 것들을\n함께 나눌 사람들을 찾아보아요</string>
    <string name="onboarding_title_second">성장을 함께</string>
    <string name="onboarding_content_second">같은 목표를 가진 사람들과 꾸준하고\n깊이 있는 소통을 하며 발전할 수 있어요</string>
    <string name="onboarding_title_third">친구와 함께</string>
    <string name="onboarding_content_third">주변 친구들과 모임을 만들어\n편하게 관리하고 즐거운 추억을 쌓을 수 있어요</string>
    <string name="login_plub_description">our play club,</string>
    <string name="login_plub_name">PLUB!</string>
    <string name="login_plub_terms">가입을 진행할 경우, 서비스 약관 및\n개인정보 처리방침에 동의한 것으로 간주합니다.</string>
    <string name="login_kakao_text">카카오톡으로 계속하기</string>
    <string name="login_google_text">Google로 계속하기</string>
    <string name="sign_up_terms_title">가입을 위한 약관 동의가 필요해요.</string>
    <string name="sign_up_terms_description">서비스를 이용할 때 필요해요.</string>
    <string name="sign_up_terms_all_title">전체 동의</string>
    <string name="sign_up_terms_privacy_title">이용약관 및 개인정보취급방침 (필수)</string>
    <string name="sign_up_terms_location_title">위치 기반 서비스 이용 약관 (필수)</string>
    <string name="sign_up_terms_age_title">만 14세 이상 확인 (필수)</string>
    <string name="sign_up_terms_collect_title">개인정보 수집 이용 동의 (필수)</string>
    <string name="sign_up_terms_marketing_title">마케팅 활용 동의 (선택)</string>
    <string name="sign_up_personal_info_title">먼저, 성별과 태어난 날을 알려주세요.</string>
    <string name="sign_up_personal_info_description">서비스의 원활한 이용을 위하여 정확한 정보를 입력해주세요!</string>
    <string name="create_gathering_select_plub_category_title">취미에 진심인 우리!\n어떤 플러빙을 시작해 볼까요?</string>
    <string name="create_gathering_select_plub_category_balloon">5개까지 선택할 수 있어요!</string>
    <string name="create_gathering_title_and_name_title">이 모임을 뭐라고 부를까요?</string>
    <string name="create_gathering_title_and_name_description">소개 타이틀, 모임 이름을 적어주세요.</string>
    <string name="create_gathering_title_and_name_introduction_title">소개 타이틀</string>
    <string name="create_gathering_title_and_name_introduction_title_hint">날 좋은날 같이 사진 찍으러 갈 사람~</string>
    <string name="create_gathering_title_and_name_gathering_name">모임 이름</string>
    <string name="create_gathering_title_and_name_gathering_name_hint">우리동네 사진모임</string>
    <string name="create_gathering_goal_and_introduce_and_picture_title">우리 모임은 어떤 모임인가요?</string>
    <string name="create_gathering_goal_and_introduce_and_picture_description">모임에 대해서 자세히 설명해주세요.</string>
    <string name="create_gathering_goal_and_introduce_and_picture_gathering_goal_title">모임 목표</string>
    <string name="create_gathering_goal_and_introduce_and_picture_gathering_goal_hint">날 좋은날 같이 사진 찍으러 갈 사람~</string>
    <string name="create_gathering_goal_and_introduce_and_picture_gathering_introduce_title">모임 소개글</string>
    <string name="create_gathering_goal_and_introduce_and_picture_gathering_introduce_hint">우리 모임은요...!!</string>
    <string name="create_gathering_goal_and_introduce_and_picture_gathering_picture_title">모임 소개 사진 (선택)</string>
    <string name="create_gathering_day_and_on_offline_and_location_title">언제, 어디서 만날까요?</string>
    <string name="create_gathering_day_and_on_offline_and_location_description">모임 요일, 온/오프라인, 장소정보를 적어주세요.</string>
    <string name="create_gathering_day_and_on_offline_and_location_gathering_day_title">우리 언제 만나요?</string>
    <string name="create_gathering_day_and_on_offline_and_location_gathering_time_title">몇시에 만나요?</string>
    <string name="create_gathering_day_and_on_offline_and_location_gathering_time_hint">시간을 선택해주세요.</string>
    <string name="create_gathering_day_and_on_offline_and_location_gathering_on_offline_title">온/오프라인</string>
    <string name="create_gathering_day_and_on_offline_and_location_gathering_location_title">모이는 장소를 알려주세요!</string>
    <string name="create_gathering_day_and_on_offline_and_location_gathering_location_hint">장소를 검색해주세요</string>
    <string name="custom_view_add_single_image_imageview_descriptor">이미지 추가 아이콘</string>
    <string name="custom_view_add_single_image_add_image_text">사진 추가하기</string>
    <string name="bottom_sheet_search_gathering_location_title">장소 검색</string>
    <string name="bottom_sheet_search_gathering_location_hint">장소를 검색해주세요</string>
    <string name="bottom_sheet_search_gathering_location_search_descriptor">검색 설명 이미지</string>
    <string name="bottom_sheet_search_gathering_location_search_description_title">장소 또는 지역을 검색해주세요</string>
    <string name="create_gathering_finish_image_descriptor">모임 생성 완료 이미지</string>
    <string name="create_gathering_finish_description">모임 생성 완료!</string>
    <string name="create_gathering_finish_show_my_article">내가 쓴 글 보기</string>
    <string name="create_gathering_finish_go_to_main">메인으로</string>
    <string name="bottom_sheet_delete_question_description">를 삭제 할까요?</string>
    <string name="bottom_sheet_delete_question_no">아니요! 그냥 둘게요.</string>
    <string name="bottom_sheet_delete_question_yes">네, 삭제할게요.</string>
    <string name="include_item_question_hint">소개하는 내용을 입력해주세요</string>
    <string name="include_item_question_max_text">/300</string>
    <string name="include_item_question_now_text">0</string>
    <string name="my_page_approve">받기</string>
    <string name="my_page_setting_change_yes">네, 할게요</string>
    <string name="my_page_setting_question_change_nickname">닉네임을 변경할까요?</string>
    <string name="my_page_setting_introduce_about_changing_nickname">닉네임 변경은 1회만 가능해요.\n 지금 변경한 닉네임은 탈퇴 시까지 사용됩니다</string>
    <string name="my_page_again_approve">해당 지원자를\n받으시겠어요?</string>
    <string name="my_page_again_cancel">이 모임에 참여하고 싶지\n않으신가요?</string>
</resources>