<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_navigation_main"
        android:title="@string/bottom_navigation_main"
        android:icon="@drawable/selector_ic_bottom_navigation_main" />
    <item android:id="@+id/menu_navigation_gathering"
        android:title="@string/bottom_navigation_gathering"
        android:icon="@drawable/selector_ic_bottom_navigation_gathering" />
    <item android:id="@+id/menu_navigation_noti"
        android:title="@string/bottom_navigation_noti"
        android:icon="@drawable/selector_ic_bottom_navigation_noti" />
    <item android:id="@+id/menu_navigation_profile"
        android:title="@string/bottom_navigation_profile"
        android:icon="@drawable/selector_ic_bottom_navigation_profile" />
</menu>