<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.plub.presentation.ui.createGathering.goalAndIntroduceAndPicture.CreateGatheringGoalAndIntroduceAndPictureViewModel" />

        <variable
            name="parent_vm"
            type="com.plub.presentation.ui.createGathering.CreateGatheringViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.createGathering.goalAndIntroduceAndPicture.GoalAndIntroduceAndPictureFragment">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_gathering_goal_and_introduce_and_picture_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_title_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_gathering_goal_and_introduce_and_picture_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title" />

        <TextView
            android:id="@+id/text_view_gathering_goal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/create_gathering_goal_and_introduce_and_picture_gathering_goal_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title_description" />

        <EditText
            android:id="@+id/edit_text_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/create_gathering_title_and_name_introduction_title_hint"
            android:text="@{vm.uiState.gatheringGoal}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_gathering_goal_title" />

        <TextView
            android:id="@+id/text_view_introduction_title_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/int_to_string(vm.uiState.gatheringGoal.length())}"
            app:layout_constraintEnd_toEndOf="@id/edit_text_goal"
            app:layout_constraintTop_toBottomOf="@id/edit_text_goal"
            tools:text="0" />

        <TextView
            android:id="@+id/text_view_gathering_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/create_gathering_goal_and_introduce_and_picture_gathering_introduce_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_goal" />

        <EditText
            android:id="@+id/edit_text_gathering_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/create_gathering_goal_and_introduce_and_picture_gathering_introduce_hint"
            android:text="@{vm.uiState.gatheringIntroduce}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_gathering_name_title" />

        <TextView
            android:id="@+id/text_view_gathering_name_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/int_to_string(vm.uiState.gatheringIntroduce.length())}"
            app:layout_constraintEnd_toEndOf="@id/edit_text_gathering_introduce"
            app:layout_constraintTop_toBottomOf="@id/edit_text_gathering_introduce"
            tools:text="0" />

        <TextView
            android:id="@+id/text_view_gathering_picture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/create_gathering_goal_and_introduce_and_picture_gathering_picture_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_gathering_introduce" />

        <com.plub.presentation.ui.custom.AddSingleImageView
            android:id="@+id/add_single_image_view_gathering_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.onClickAddSingleImageButton()}"
            app:gatheringImage="@{vm.uiState.gatheringPicture}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_gathering_picture_title" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/selector_bg_e4e4e4_to_5f5ff9"
            android:enabled="@{vm.uiState.isNextButtonEnabled}"
            android:onClick="@{() -> parent_vm.onMoveToNextPage(vm.uiState)}"
            android:text="@string/word_next"
            android:textColor="@drawable/selector_enable_color_8c8c8c_to_white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>