<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:background="@drawable/bg_rectangle_filled_white_radius_20">

        <TextView
            android:id="@+id/text_view_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/my_page_again_approve"
            android:gravity="center"
            android:textColor="@color/color_5f5ff9"
            android:textSize="20sp"
            android:layout_marginTop="59dp"
            android:layout_width="296dp"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_rectangle_filled_f2f3f4_radius_8"
            android:text="@string/word_cancel"
            android:textColor="@color/color_8c8c8c"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/text_view_title"
            app:layout_constraintEnd_toStartOf="@id/button_approve"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_approve"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_rectangle_filled_5f5ff9_radius_8"
            android:text="@string/my_page_approve"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>